<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/date"
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />

    <TextView
        android:id="@+id/origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin" >
    </TextView>

    <TextView
        android:id="@+id/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination" >
    </TextView>

    <TextView
        android:id="@+id/km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="33dp"
        android:layout_height="29dp"
        android:src="@drawable/delete1" />
    
    <TextView
        android:id="@+id/separador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separador" />
</LinearLayout>