<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TableRow android:id="@+id/idRow" android:layout_width="match_parent"
    android:layout_height="match_parent" android:visibility= "gone" >
        <TextView android:text="@string/identificator" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
            </TextView>
        <TextView android:text="@string/identificator" 
            android:layout_height="wrap_content" 
            android:layout_width="match_parent">
            </TextView>
    </TableRow>
    
    <TableRow android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView android:text="@string/date" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
            </TextView>
        <EditText android:id="@+id/date" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
            </EditText>
    </TableRow>
    
        <TableRow android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView android:text="@string/origin" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
            </TextView>
        <EditText android:id="@+id/origin" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
            </EditText>
    </TableRow>
    
        <TableRow android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView android:text="@string/destination" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
            </TextView>
        <EditText android:id="@+id/destination" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
            </EditText>
    </TableRow>
    
        <TableRow android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView android:text="@string/km" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
            </TextView>
        <EditText android:id="@+id/km" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content"
            android:inputType="numberDecimal">
            </EditText>
    </TableRow>
    
        <TableRow android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView android:text="@string/price" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
            </TextView>
        <EditText android:id="@+id/price" 
            android:layout_height="wrap_content" 
            android:layout_width="match_parent"
            android:inputType="numberDecimal">
            </EditText>
    </TableRow>
    
        <Button android:text="@string/save" 
            android:id="@+id/add"  
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
        </Button>

</LinearLayout>