<?xml version="1.0" encoding="utf-8"?>


<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:background="@drawable/backrepeat"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >
 
    <TableRow
        android:layout_marginTop="60dp">
        <TextView android:text="@string/calculate" 
            		android:gravity="center"/>
        <TextView android:text="@string/stops" 
            		android:gravity="center"/>
        <TextView android:text="@string/routes" 
            	android:gravity="center"/>
    </TableRow>
    <TableRow>
 		 <ImageButton android:id="@+id/buttonCalculate"
 		android:src="@drawable/calculate"
 		android:background="@null"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="20dp"
        />
 		 <ImageButton android:id="@+id/buttonMyStops"
 		android:src="@drawable/parada"
 		android:background="@null"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="20dp"/>
 		 <ImageButton android:id="@+id/buttonMyRoutes"
 		android:src="@drawable/routes"
 		android:background="@null"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="20dp" />
 		  
    
        
    </TableRow>
        
    <TableRow>
        <TextView android:text="@string/settings" 
            		android:gravity="center"/>
        <TextView android:text="@string/help" 
            		android:gravity="center"/>
        <TextView android:text="@string/exit" 
            		android:gravity="center"/>
    </TableRow>
    <TableRow>
 		 <ImageButton android:id="@+id/buttonSettings"
 		android:src="@drawable/settings"
 		android:background="@null"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="20dp"
        />
 		 <ImageButton android:id="@+id/buttonHelp"
 		android:src="@drawable/help"
 		android:background="@null"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="20dp"
        />
 		 <ImageButton android:id="@+id/buttonExit"
 		android:src="@drawable/exit"
 		android:background="@null"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="20dp"
        />
       
    </TableRow>
 
</TableLayout>
