<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/backrepeat"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/tvPointA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editPointA"
        android:layout_alignLeft="@+id/editPointA"
        android:text="@string/source" />

    <Button
        android:id="@+id/buttonSearch"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="116dp"
        android:text="@string/calculate" />

    <EditText
        android:id="@+id/editPointB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSearch"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editPointA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvPointB"
        android:layout_alignLeft="@+id/tvPointB"
        android:ems="10" />

    <TextView
        android:id="@+id/tvPointB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editPointB"
        android:layout_alignLeft="@+id/editPointB"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/destination" />

    <CheckBox
        android:id="@+id/checkMyPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/editPointA"
        android:layout_marginTop="24dp"
        android:text="@string/myposition" />

</RelativeLayout>