<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:background="@drawable/backrepeat"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >



    <EditText
        android:id="@+id/editPointToStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonShowStops"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPointToStop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/show_stops" />

    <CheckBox
        android:id="@+id/checkMyPositionToStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editPointToStop"
        android:layout_alignRight="@+id/editPointToStop"
        android:layout_marginBottom="72dp"
        android:text="@string/myposition" />

    <TextView
        android:id="@+id/tvToStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editPointToStop"
        android:layout_alignLeft="@+id/editPointToStop"
        android:layout_marginBottom="38dp"
        android:text="@string/origin" />

</RelativeLayout>